fix sidebar overlapping with footer

--- a/src/common-styles.less
+++ b/src/common-styles.less
@@ -8,6 +8,8 @@
 @mobile-max-width: 400px;
 @sidebar-visibility-min-width: 1200px;
 
+@footer-height: 28px;
+
 @heading-font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue',
   'Roboto', Roboto, Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
   'Segoe UI', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
