--- a/src/components/Layout/Footer/Footer.less
+++ b/src/components/Layout/Footer/Footer.less
@@ -5,7 +5,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 28px;
+  height: @footer-height;
   z-index: 10;
 
   section {
@@ -34,7 +34,7 @@
     align-items: center;
     color: #222;
     font-size: 0.8rem;
-    line-height: 28px;
+    line-height: @footer-height;
     padding: 0 0.5rem;
   }
 
