--- a/src/components/Layout/Sidebar/Sidebar.less
+++ b/src/components/Layout/Sidebar/Sidebar.less
@@ -2,6 +2,7 @@
 
 .sidebarCustom {
   width: 320px;
+  height: calc(100vh - @footer-height) !important;
   overflow-y: hidden !important;
   overflow-x: hidden;
 
