--- a/src/components/Layout/Sidebar/SidebarContent.less
+++ b/src/components/Layout/Sidebar/SidebarContent.less
@@ -10,10 +10,6 @@
   background-color: #757575;
 }
 
-.sidebarContent {
-  height: 100%;
-}
-
 .sidebarLink {
   display: block;
   color: #757575;
